--- a/src/resources/main.ui
+++ b/src/resources/main.ui
@@ -74,6 +74,7 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
           <object class="GtkInfoBar" id="info_bar">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
+            <property name="show_close_button">True</property>
             <child internal-child="action_area">
               <object class="GtkButtonBox">
                 <property name="can_focus">False</property>
