Button Sensor aktive/ deaktive beim start je nach Hardware status

--- a/src/resources/main.ui
+++ b/src/resources/main.ui
@@ -60,10 +60,15 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
-  <object class="GtkImage" id="image1">
+  <object class="GtkImage" id="image_reset">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="stock">gtk-refresh</property>
+  </object>
+  <object class="GtkImage" id="label_discovery">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-find</property>
   </object>
   <object class="GtkApplicationWindow" id="main_window">
     <property name="width_request">1024</property>
@@ -346,6 +351,8 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
                             <property name="halign">end</property>
+                            <property name="image">label_discovery</property>
+                            <property name="always_show_image">True</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -373,7 +380,7 @@ Author: "Stefan Müller <s.mueller@it.kls-glt.de>"
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
-                            <property name="image">image1</property>
+                            <property name="image">image_reset</property>
                             <property name="image_position">top</property>
                             <property name="always_show_image">True</property>
                           </object>
